[package]
name = "md-preview"
version = "0.3.0"
edition = "2021"
description = "Render markdown to self-contained HTML with mermaid and syntax highlighting"
license = "MIT"
repository = "https://github.com/feng409/s3-md-preview.nvim"

[[bin]]
name = "md-preview"
path = "src/main.rs"

[features]
default = ["s3"]
s3 = ["dep:rust-s3", "dep:tokio"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
comrak = { version = "0.36", default-features = false }
mermaid-rs-renderer = { version = "0.2", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-onig"] }
rust-s3 = { version = "0.35", optional = true, default-features = false, features = ["tokio-rustls-tls"] }
tokio = { version = "1", optional = true, features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1"

[dev-dependencies]
insta = "1"
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
